Thu Nov 30 20:14:05 CET 2006 Christian Anthon <anthon@kiku.dk>

	* gtkoptions.c: gtk sizing problem in sound options.

Tue Nov 28 23:59:09 CET 2006  Christian Anthon <anthon@kiku.dk>

	* sound.c: cleanup of play_file

Sun Nov 26 21:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkoptions.c (mainly): Selectable sound files (in gui)

Sun Nov 26 16:59:28 CET 2006 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, gnubg.c, gtkfile.c, import.c, import.h: "import gam",
	"import party" and "import empire", respectively imports, jellyfish .gam,
	partygammon .gam and gammonempire .gam. 

Sun Nov 26 16:24:30 CET 2006 Christian Anthon <anthon@kiku.dk>

	* gtkfile.c: Default folders on win32

Sat Nov 25 17:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* import.c: First try at PartyGammon import
		(based on convert-to-mat script by gunnar bluth and achim mueller)

Thu Nov 23 18:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkfile.c: Add warning if trying to import PartyGammon game files

Sat Nov 18 14:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkprefs.c: Fix bug in saving/exporting custom designs

Wed Nov 15 16:53:19 CET 2006 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, set.c, show.c: in fresh installs: g11.xml, more sensible
	rollout settings, infinite number of moves analysed.
	* gtkboard.c, gtkgame.c, gtkpanels.c: docked panels wider by default.
	gnubg starts maximized(make this an option?). Attempt to fix ugly
	resizes in player/score frames.

Thu Nov 16 15:27:32 CET 2006 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gtkgame.c, record.c, record.h, gtkprefs.c: Move all
	rc files to g_get_home_dir()/.gnubg (both windows and unix).

Tue Nov 14 21:17:55 GMT 2006 Jim Segrave <jes@jes-2.demon.nl>

	* gtkgame.c : GTKShowScoreSheet callback to MoveListIntoView 
	  2nd parameter is pointer to int, not int

Mon Nov 13 22:32:37 CET 2006 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, configure.in,g gnubg.c , gtkbearoff.c , gtkgame.c ,